--- a/src/pages/AboutUs/Aboutus.css
+++ b/src/pages/AboutUs/Aboutus.css
@@ -1,169 +1,149 @@
-@import '../../root.css';
+@import "../../root.css";
 
 :root {
-    --background-white: #ffff;
-    --background-red: #ff0037;
-    --primary-blue: #0766ad;
-    --blue-dark: #0D4C7C;
-    --green-light: #c5e897;
-    --green-dark: #9BBC6E;
-    --black-light: #C0C0C0;
-    --black-dark: #4E5656;
-    --neutral-blue: #29adb2;
-    --text-black: #3e4141;
-    --text-white: #f3f3f3;
-    --text-grey: #a7a7a7;
-    --Desktop-Text-Heading1: 48px;
-    --Desktop-Text-Heading2: 40px;
-    --Desktop-Text-Heading3: 32px;
-    --Desktop-Text-Heading4: 24px;
-    --Common-Text-Subtitle: 20px;
-    --Common-Text-Label: 16px;
-    --Common-Text-Body1: 20px;
-    --Common-Text-Body2: 16px;
-    --Common-Text-Caption: 13px;
+  --background-white: #ffff;
+  --background-red: #ff0037;
+  --primary-blue: #0766ad;
+  --blue-dark: #0d4c7c;
+  --green-light: #c5e897;
+  --green-dark: #9bbc6e;
+  --black-light: #c0c0c0;
+  --black-dark: #4e5656;
+  --neutral-blue: #29adb2;
+  --text-black: #3e4141;
+  --text-white: #f3f3f3;
+  --text-grey: #a7a7a7;
+  --Desktop-Text-Heading1: 48px;
+  --Desktop-Text-Heading2: 40px;
+  --Desktop-Text-Heading3: 32px;
+  --Desktop-Text-Heading4: 24px;
+  --Common-Text-Subtitle: 20px;
+  --Common-Text-Label: 16px;
+  --Common-Text-Body1: 20px;
+  --Common-Text-Body2: 16px;
+  --Common-Text-Caption: 13px;
 }
 
 .aboutus {
-    display: flex;
-    flex-direction: column;
-    margin: 16px 64px;
-    text-align: left;
-    align-items: center;
-    gap: 64px
+  display: flex;
+  flex-direction: column;
+  margin: 16px 64px;
+  text-align: left;
+  align-items: center;
+  gap: 64px;
 }
 
 .aboutus img {
-    border-radius: 6px;
+  border-radius: 6px;
 }
-
-
 
 .imgs-small {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
-
 .aboutus h2 {
-    color: var(--primary-blue);
-    padding: 20px;
-
+  color: var(--primary-blue);
+  padding: 20px;
 }
 
 .ourstory-container {
-    display: flex;
-    flex-direction: row;
-    text-align: left;
-    align-items: center;
-    gap: 32px;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  text-align: left;
+  align-items: center;
+  gap: 32px;
+  justify-content: space-around;
 }
 
 .ourstory-text {
-    width: 50%;
+  width: 50%;
 }
 
 .ourstory-image {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    align-items: center;
-
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: center;
 }
 
 .imgs-small {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
 }
 
-
 .mission-container {
-    display: flex;
-    flex-direction: row;
-    text-align: left;
-    justify-content: space-around;
-
+  display: flex;
+  flex-direction: row;
+  text-align: left;
+  justify-content: space-around;
 }
 
 .mission-text {
-    width: 50%;
-
+  width: 50%;
 }
 
 .mission-image img {
-    width: 400px;
-    height: 300px;
+  width: 400px;
+  height: 300px;
 }
 
 .imgs-large img {
-    width: 400px;
+  width: 400px;
 }
 
 .imgs-small img {
-    width: 200px;
+  width: 200px;
 }
 
 @media (max-width: 1200px) {
+  .aboutus {
+    text-align: left;
+    margin: 0;
+    padding: 0;
+    gap: 0;
+  }
 
-    .aboutus {
-        text-align: left;
-        margin: 0;
-        padding: 0;
-        gap: 0;
-    }
+  .ourstory-text {
+    text-align: center;
+    width: 90%;
+  }
 
-    .ourstory-text {
-        text-align: center;
-        width: 90%;
+  .ourstory-image {
+    margin: 0;
+    padding: 0;
+  }
 
-    }
+  .ourstory-container {
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
+    gap: 0;
+  }
 
-    .ourstory-image {
+  .mission-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    width: 90%;
+    gap: 0;
+  }
 
-        margin: 0;
-        padding: 0;
-    }
+  .mission-text {
+    width: 100%;
+    text-align: center;
+  }
 
+  .mission-image img {
+    width: 350px;
+    margin-left: 0;
+  }
 
-
-
-
-    .ourstory-container {
-        display: flex;
-        flex-direction: column-reverse;
-        text-align: left;
-        align-items: center;
-        justify-content: center;
-        gap: 0
-    }
-
-    .mission-container {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        justify-content: center;
-        width: 90%;
-        gap: 0
-    }
-
-    .mission-text {
-        width: 100%;
-        text-align: center;
-
-
-    }
-
-    .mission-image img {
-        width: 350px;
-        margin-left: 0;
-    }
-
-    .mission-image {
-        margin-bottom: 16px;
-    }
-
-
-
+  .mission-image {
+    margin-bottom: 16px;
+  }
 }
