--- a/src/pages/Products/CategoryFilter.css
+++ b/src/pages/Products/CategoryFilter.css
@@ -1,186 +1,149 @@
-@import '../../root.css';
-;
-
+@import "../../root.css";
 :root {
-    --background-white: #ffff;
-    --background-red: #ff0037;
-    --primary-blue: #0766ad;
-    --blue-dark: #0D4C7C;
-    --green-light: #c5e897;
-    --green-dark: #9BBC6E;
-    --black-light: #C0C0C0;
-    --black-dark: #4E5656;
-    --neutral-blue: #29adb2;
-    --text-black: #3e4141;
-    --text-white: #f3f3f3;
-    --text-grey: #a7a7a7;
-    --Desktop-Text-Heading1: 48px;
-    --Desktop-Text-Heading2: 40px;
-    --Desktop-Text-Heading3: 32px;
-    --Desktop-Text-Heading4: 24px;
-    --Common-Text-Subtitle: 20px;
-    --Common-Text-Label: 16px;
-    --Common-Text-Body1: 20px;
-    --Common-Text-Body2: 16px;
-    --Common-Text-Caption: 13px;
+  --background-white: #ffff;
+  --background-red: #ff0037;
+  --primary-blue: #0766ad;
+  --blue-dark: #0d4c7c;
+  --green-light: #c5e897;
+  --green-dark: #9bbc6e;
+  --black-light: #c0c0c0;
+  --black-dark: #4e5656;
+  --neutral-blue: #29adb2;
+  --text-black: #3e4141;
+  --text-white: #f3f3f3;
+  --text-grey: #a7a7a7;
+  --Desktop-Text-Heading1: 48px;
+  --Desktop-Text-Heading2: 40px;
+  --Desktop-Text-Heading3: 32px;
+  --Desktop-Text-Heading4: 24px;
+  --Common-Text-Subtitle: 20px;
+  --Common-Text-Label: 16px;
+  --Common-Text-Body1: 20px;
+  --Common-Text-Body2: 16px;
+  --Common-Text-Caption: 13px;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-
 
 body {
-    background: var(--background-white);
-
+  background: var(--background-white);
 }
-
 
 /* CATAGORY */
 
 .category-filter {
-    border-right: 2px solid var(--green-dark);
-    margin-left: 0px;
-    border-radius: 0px;
-    padding: 16px;
-    position: sticky;
-    top: 0;
-
+  border-right: 2px solid var(--green-dark);
+  margin-left: 0px;
+  border-radius: 0px;
+  padding: 16px;
+  position: sticky;
+  top: 0;
 }
 
 .category-filter .active {
-    background: none;
+  background: none;
 }
 
-
-
 .category-filter ul {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 .category-filter .fa-filter {
-
-    padding-right: 8px;
+  padding-right: 8px;
 }
 
-
-
 .category-filter .bussiness-type {
-    font-size: 1.2rem;
-    color: var(--primary-blue)
+  font-size: 1.2rem;
+  color: var(--primary-blue);
 }
 
 .category-filter .bussiness-type:hover {
-    color: var(--blue-dark);
+  color: var(--blue-dark);
 }
 
 .category-filter li {
-    list-style: none;
+  list-style: none;
 }
 
 .category-filter .fa-caret-down {
-    font-size: 1.2rem;
-    padding: 8px;
-    color: var(--primary-blue);
+  font-size: 1.2rem;
+  padding: 8px;
+  color: var(--primary-blue);
 }
 
 .category-filter .property-show li,
 .category-filter .product-type-show li {
-    margin: 0;
-    padding: 0;
-    text-align: right;
+  margin: 0;
+  padding: 0;
+  text-align: right;
 }
 
 .category-filter .property-show li:hover,
 .category-filter .product-type-show li:hover {
-    color: var(--primary-blue);
+  color: var(--primary-blue);
 }
 
 .category-filter input {
-    margin: 16px;
-    cursor: pointer;
-
+  margin: 16px;
+  cursor: pointer;
 }
 
 .container {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-
-
 @media screen and (max-width: 768px) {
-    .category-filter {
-        border: none;
-        padding: 0;
-        margin: 0;
-    }
+  .category-filter {
+    border: none;
+    padding: 0;
+    margin: 0;
+  }
 
-    .category-filter input {
-        margin: 12px;
-    }
+  .category-filter input {
+    margin: 12px;
+  }
 
-    .show-filter {
-        padding: 0;
-    }
+  .show-filter {
+    padding: 0;
+  }
 
-    .text {
+  .text {
+    display: flex;
+    flex-direction: column;
+  }
 
-        display: flex;
-        flex-direction: column;
+  .property-show {
+    display: flex;
+    justify-content: center;
+  }
 
-    }
+  .product-type-show {
+    display: flex;
+    justify-content: center;
+  }
 
-    .property-show {
-        display: flex;
-        justify-content: center;
+  .category-filter {
+    margin: 0px;
+  }
 
-
-
-    }
-
-    .product-type-show {
-        display: flex;
-        justify-content: center;
-
-    }
-
-
-
-    .category-filter {
-        margin: 0px;
-
-    }
-
-
-    .category-filter {
-        background: #e9e9e9;
-        width: 100vw;
-        padding: 8px;
-        margin-bottom: 16px;
-
-    }
-
-
-
-
-
-
-
-
-
-
-
-
+  .category-filter {
+    background: #e9e9e9;
+    width: 100vw;
+    padding: 8px;
+    margin-bottom: 16px;
+  }
 }
