--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,69 +1,67 @@
-@import '../../root.css';
+@import "../../root.css";
 
 :root {
-    --background-white: #ffff;
-    --background-red: #ff0037;
-    --primary-blue: #0766ad;
-    --blue-dark: #0D4C7C;
-    --green-light: #c5e897;
-    --green-dark: #9BBC6E;
-    --black-light: #C0C0C0;
-    --black-dark: #4E5656;
-    --neutral-blue: #29adb2;
-    --text-black: #3e4141;
-    --text-white: #f3f3f3;
-    --text-grey: #a7a7a7;
-    --Desktop-Text-Heading1: 48px;
-    --Desktop-Text-Heading2: 40px;
-    --Desktop-Text-Heading3: 32px;
-    --Desktop-Text-Heading4: 24px;
-    --Common-Text-Subtitle: 20px;
-    --Common-Text-Label: 16px;
-    --Common-Text-Body1: 20px;
-    --Common-Text-Body2: 16px;
-    --Common-Text-Caption: 13px;
+  --background-white: #ffff;
+  --background-red: #ff0037;
+  --primary-blue: #0766ad;
+  --blue-dark: #0d4c7c;
+  --green-light: #c5e897;
+  --green-dark: #9bbc6e;
+  --black-light: #c0c0c0;
+  --black-dark: #4e5656;
+  --neutral-blue: #29adb2;
+  --text-black: #3e4141;
+  --text-white: #f3f3f3;
+  --text-grey: #a7a7a7;
+  --Desktop-Text-Heading1: 48px;
+  --Desktop-Text-Heading2: 40px;
+  --Desktop-Text-Heading3: 32px;
+  --Desktop-Text-Heading4: 24px;
+  --Common-Text-Subtitle: 20px;
+  --Common-Text-Label: 16px;
+  --Common-Text-Body1: 20px;
+  --Common-Text-Body2: 16px;
+  --Common-Text-Caption: 13px;
 }
 
 .projects-page {
-    text-align: center;
-    background: var(--primary-blue);
-    height: 100%;
-    padding-bottom: 64px;
-
+  text-align: center;
+  background: var(--primary-blue);
+  height: 100%;
+  padding-bottom: 64px;
 }
 
 .projects-page header {
-    text-align: center;
-    color: var(--text-white);
-    margin-top: 64px;
-    margin-left: 64px;
-    margin-right: 64px;
+  text-align: center;
+  color: var(--text-white);
+  margin-top: 64px;
+  margin-left: 64px;
+  margin-right: 64px;
 }
 
 .projects-content .title {
-    text-align: left;
-    color: var(--primary-blue);
-    background: var(--background-white);
-    border-radius: 6px;
-    width: fit-content;
-    padding: 8px;
-    margin-left: 64px;
-    margin-top: 64px;
+  text-align: left;
+  color: var(--primary-blue);
+  background: var(--background-white);
+  border-radius: 6px;
+  width: fit-content;
+  padding: 8px;
+  margin-left: 64px;
+  margin-top: 64px;
 }
 
 .projects-content .title:hover {
-    background-color: var(--green-light);
-
+  background-color: var(--green-light);
 }
 
 @media screen and (max-width: 768px) {
-    .projects-page header {
-        text-align: center;
-        color: var(--text-white);
-        margin: 16px
-    }
+  .projects-page header {
+    text-align: center;
+    color: var(--text-white);
+    margin: 16px;
+  }
 
-    .projects-content .title {
-        margin: 32px 16px;
-    }
+  .projects-content .title {
+    margin: 32px 16px;
+  }
 }
